adding week 7 updates

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,9 @@
+<!--
+  Title: Exercise 7.4
+  Author: Evan Durkin
+  Date: February 19, 2022
+-->
+
 <div fxLayout="row wrap" fxLayoutGap="20px">
 
   <div fxFlex class="grade-form">
