--- a/src/app/base-layout/base-layout.component.html
+++ b/src/app/base-layout/base-layout.component.html
@@ -1,3 +1,9 @@
+<!--
+  Title: Exercise 7.4
+  Author: Evan Durkin
+  Date: February 19, 2022
+-->
+
 <mat-toolbar color="primary">
 
   <mat-toolbar-row>
